--- a/source/index.jade
+++ b/source/index.jade
@@ -142,32 +142,32 @@ html(lang="en")
           ul.items
             li
               a(href='https://hicksonwei.github.io/HexSchool_RWD_FinalProject/', target="_blank")
-                img.works-pic(src='./img/works1.jpg')
+                img.works-pic(src='./img/works1.jpg', alt='六角西餐廳')
                 p.topic 六角西餐廳
                 p.feature 客製 RWD + Scss + jQuery
             li
               a(href='https://hicksonwei.github.io/HexSchool_JS_JSON/', target="_blank")
-                img.works-pic(src='./img/works2.jpg')
+                img.works-pic(src='./img/works2.jpg', alt='高雄旅遊資訊')
                 p.topic 高雄旅遊資訊
                 p.feature 使用 JSON 格式資料渲染畫面
             li
               a(href='https://hicksonwei.github.io/Landing_Page/', target="_blank")
-                img.works-pic(src='./img/works3.jpg')
+                img.works-pic(src='./img/works3.jpg', alt='六角 Landing Page')
                 p.topic 六角 Landing Page
                 p.feature Bootstrap 4 + gulp 管理
             li
               a(href='https://member-management-system.herokuapp.com/', target="_blank")
-                img.works-pic(src='./img/works4.jpg')
+                img.works-pic(src='./img/works4.jpg', alt='留言板')
                 p.topic 留言板
                 p.feature Express + Firebase 實作登入系統
             li
               a(href='https://spa-nuxt.herokuapp.com/about', target="_blank")
-                img.works-pic(src='./img/works5.jpg')
+                img.works-pic(src='./img/works5.jpg', alt='SPA')
                 p.topic SPA
                 p.feature Vue.js + Nuxt 實作 Vue-SSR
             li
               a(href='https://afternoon-ridge-75133.herokuapp.com/', target="_blank")
-                img.works-pic(src='./img/works6.jpg')
+                img.works-pic(src='./img/works6.jpg', alt='todolist')
                 p.topic todolist
                 p.feature Express + Firebase 實作 todolist
         .clearfix
